--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>404 微转盘</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,9 +50,10 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>微转盘</h1>
+    <p>
+      <a href='/?404'>查看其他游戏</a>
+    </p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
