--- a/redpack_model.html
+++ b/redpack_model.html
@@ -1,3 +1,4 @@
+
 <% if @beacon %>
 <% @count = Record.where( :beaconid => @beacon.id,  :game_id => @material.id ).group(:user_id).length %>
 <% @rs = Record.where( :beaconid => @beacon.id,  :game_id => @material.id).group(:user_id).order('created_at desc').limit(20) %>
@@ -12,11 +13,12 @@
       <img class="decorate" src="http://wx.51self.com/img/card/hongbao/hb_decorection.png" alt="" />
       <div class="interactive"> 
         <img src="http://wx.51self.com/img/card/hongbao/hb_AterOpen_get.png"/>
-        <span><%=Record.find_by(user_id: current_user.id, game_id: @material.id).score%>元</span> 
+        <span><%=Record.find_by(user_id: current_user.id, game_id: @material.id).score.to_f/100%>元</span> 
       </div>
-    <img class="logo" src="http://wx.51self.com/img/card/hongbao/logo.png" alt="" />
+      <img class="logo" src="http://wx.51self.com/img/card/hongbao/logo.png" alt="" />
     </div>
     <% elsif @count and @count  < @store %>
+
     <div class="top_coupon">
       <img class="coupon_bg" src="http://wx.51self.com/img/card/hongbao/hb_bg%20up.png" alt="" />
       <img class="decorate" src="http://wx.51self.com/img/card/hongbao/hb_decorection.png" alt="" />
@@ -24,8 +26,9 @@
         <img id="interactive-tip"src="http://wx.51self.com/img/card/hongbao/hb_BeforeOpen.png" alt="" onClick="interactive()"/> 
         <span id="money"></span> 
       </div>
-    <img class="logo" src="http://wx.51self.com/img/card/hongbao/logo.png" alt="" />
+      <img class="logo" src="http://wx.51self.com/img/card/hongbao/logo.png" alt="" />
     </div>
+
     <% else %>
     <div class="top_coupon">
       <img class="coupon_bg" src="http://wx.51self.com/img/card/hongbao/hb_bg%20up.png" alt="" />
@@ -33,7 +36,7 @@
       <div class="interactive" >
         <img src="http://wx.51self.com/img/card/hongbao/hb_AfterOpen_notget.png" alt="" />
       </div>
-    <img class="logo" src="http://wx.51self.com/img/card/hongbao/logo.png" alt="" />
+      <img class="logo" src="http://wx.51self.com/img/card/hongbao/logo.png" alt="" />
     </div>
     <% end %>
 
@@ -47,7 +50,7 @@
       <div class="item-list-detail">
         <img src="<%= u.profile_img_url %>" width="32" class="userphoto">
         <span><%= u.name %></span>
-        <span class="right">领到<%=t.score %>元红包</span>
+        <span class="right">领到<%=t.score.to_f/100 %>元红包</span>
       </div>
       <% end %> 
     </div>
@@ -56,27 +59,27 @@
 
   <script type="text/javascript">
 
-      var first = false;
-      function interactive(){ 
-         if( first ){
-            return true;
-         }
-         first = true;
+    var first = false;
+    function interactive(){ 
+     if( first ){
+      return true;
+    }
+    first = true;
     document.getElementById('interactive-tip').setAttribute("src","http://wx.51self.com/img/card/hongbao/hb_AterOpen_get.png");
 
     <% if current_user and not @record%>
     <% beaconid = Ibeacon.find_by(:url=>params[:beaconid]).id%>
-    <% @rp = Redpack.find_by(beaconid: beaconid).weixin_post(current_user, params[:beaconid]).to_i/100%>
+    <% @rp = Redpack.find_by(beaconid: beaconid).weixin_post(current_user, params[:beaconid]).to_i%>
     score = '<%= @rp %>';
     ajax = new XMLHttpRequest();
     ajax.open('GET', 'http://i.51self.com/weitest/report?beaconid=<%= params[:beaconid] %>&game_id=<%= @material.id %>&score=' + score, true);
     ajax.send(null);
 
-    document.getElementById('money').innerHTML="<%= @rp %>元";
+    document.getElementById('money').innerHTML="<%= @rp.to_f/100 %>元";
 
     var rHtml = "已有<%= @count+1 %>人领取";
     $("#item-list-header").html(rHtml );
-    var insertHtml = "<div class='item-list-detail'><img src='<%= current_user.profile_img_url %>' width='32' class='userphoto'><span><%= current_user.name %></span><span class='right'>领到<%= @rp %>元红包</span></div>";
+    var insertHtml = "<div class='item-list-detail'><img src='<%= current_user.profile_img_url %>' width='32' class='userphoto'><span><%= current_user.name %></span><span class='right'>领到<%= @rp.to_f/100 %>元红包</span></div>";
     $(insertHtml).insertAfter("#item-list-header");
     var qrHtml='<div id="bar-code" class="top_barcode"><p class="time">使用时间：2015/04/20-2015/04/26</p><p>使用门店：世纪联华中环店</p><p class="method">使用方法：出示此页面或者截图给营业员</p></div>';
     $(qrHtml).insertAfter(".top_coupon");         
@@ -85,3 +88,4 @@
 
 </script>
 </body>
+
