--- a/public/statis.html
+++ b/public/statis.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <title>疯狂摇一摇</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
   <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
   <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
@@ -11,7 +13,7 @@
      chart('1340208226','dgbs','巴士摇一摇','#container_busredpack');
      chart('1341259419','dgbs','收到一个红包','#container_getredpack');
      chart('1355593447','dgbs','我的红包','#container_myredpack');
-     chart('1358498741','dgbs','地推红包','#container_ditui');
+     chart('1358498741','DyXzH--jShh9kFa6oN6Y2400','地推红包','#container_ditui');
 
      function chart(game_url,beacon_url,text,container_id){
       $.ajax({
