--- a/public/statis.html
+++ b/public/statis.html
@@ -11,6 +11,7 @@
     $(function () {
 
      chart('1340208226','dgbs','巴士摇一摇','#container_busredpack');
+     chart('1365567608','dgbs','巴士摇一摇新','#container_newbusredpack');
      chart('1341259419','dgbs','收到一个红包','#container_getredpack');
      chart('1355593447','dgbs','我的红包','#container_myredpack');
      chart('1358498741','DyXzH--jShh9kFa6oN6Y2400','地推红包','#container_ditui');
@@ -85,6 +86,7 @@
 </head>
 <body>
   <div id="container_busredpack" style="min-width:700px;height:400px"></div>
+  <div id="container_newbusredpack" style="min-width:700px;height:400px"></div>
   <div id="container_getredpack" style="min-width:700px;height:400px"></div>
   <div id="container_myredpack" style="min-width:700px;height:400px"></div>
   <div id="container_ditui" style="min-width:700px;height:400px"></div>
